# infra-agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
agents/alert-triage/: AGENT.md
agents/general/: AGENT.md
agents/gitops/: AGENT.md
agents/jenkins-pipeline/: AGENT.md
agents/shared-library/: AGENT.md
deploy/: k8s-config-example.yaml
docs/: 01-architecture-zh.md  01-architecture.md  02-agent-runtime-zh.md  02-agent-runtime.md  03-tools-skills-zh.md  03-tools-skills.md  04-sandboxed-execution-zh.md  04-sandboxed-execution.md  05-credential-management-zh.md  05-credential-management.md  06-data-plane-zh.md  06-data-plane.md  07-change-control-zh.md  07-change-control.md  08-policy-guardrails-zh.md  08-policy-guardrails.md  09-observability-zh.md  09-observability.md  10-autonomy-notifications-zh.md  10-autonomy-notifications.md  11-testing-hardening-zh.md  11-testing-hardening.md  12-ux-usability-zh.md  12-ux-usability.md  13-risk-framework-zh.md  13-risk-framework.md  README-zh.md  README.md  translation-rules.md
skills/git-operations/: SKILL.md
skills/jenkins-pipeline-analysis/: SKILL.md
skills/shared-library-maintenance/: SKILL.md
src/infra_agent/: __init__.py  run.py
src/infra_agent/agents/: __init__.py  loader.py  models.py  parser.py
src/infra_agent/cli/: __init__.py  api.py  env.py  interactive_shell.py  main.py
src/infra_agent/config/: __init__.py  paths.py
tests/unit/: test_agent_loader.py  test_cli_modes.py  test_frontmatter.py  test_ingestion.py  test_router.py  test_service.py  test_skill_loader.py  test_tools.py
(+42 files in other folders)
