[project]
name = "infra-agent"
version = "0.1.0"
description = "Infrastructure agent runtime built on the OpenAI Agents SDK."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
    "fastapi>=0.115.0",
    "greenlet>=3.1.1",
    "openai-agents>=0.14.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "questionary>=2.0.1",
    "rich>=13.9.4",
    "psycopg[binary]>=3.2.0",
    "redis>=5.2.0",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[project.scripts]
infra-agent = "infra_agent.cli.main:main"
infra-agent-runtime = "infra_agent.run:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
